[package]
name = "registry"
version = "0.1.0"
authors = ["Eman Herawy <[Eman.herawy@gmail.com]>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
# Import ink!
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", branch = "develop", default-features = false, features = ["psp37", "access_control"] }


[dev-dependencies]
ink_e2e = "4.1.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
     # OpenBrush dependency
  "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []